--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /.metadata/
 /target/
+target/m2e-wtp/web-resources/META-INF/maven/laiproject/washer/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/laiproject/washer/pom.properties
+target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
