--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,12 @@
   	<description></description>
   	<servlet-class>rpc.GetMachinesByUserId</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>RemindUser</servlet-name>
+  	<display-name>RemindUser</display-name>
+  	<description></description>
+  	<servlet-class>rpc.RemindUser</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>Test</servlet-name>
   	<url-pattern>/test</url-pattern>
@@ -89,5 +95,9 @@
   <servlet-mapping>
   	<servlet-name>GetMachinesByUserId</servlet-name>
   	<url-pattern>/getMachinesByUserId</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>RemindUser</servlet-name>
+  	<url-pattern>/remindUser</url-pattern>
   </servlet-mapping>
 </web-app>
